# ddukddak-recipe-server

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  keep-alive.yml
alembic/: env.py
alembic/versions/: 42b8b48e7a87_initial_tables.py  7fd56f8f0d12_add_save_count_and_analyzed_by_to_.py
app/: main.py
app/api/: auth.py  feed.py  health.py  recipe.py  router.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  nickname.py  security.py  token_store.py
app/models/: base.py  recipe.py  user.py
app/repositories/: feed.py  recipe.py  user.py
app/schemas/: auth.py  base.py  feed.py  recipe.py
app/services/: audio_extractor.py  auth.py  feed.py  gemini_analyzer.py  recipe.py  social_auth.py  youtube.py
docs/: API_SPEC.md
infra/: setup.sh
